remove old tabs and add photos and gallery

--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,31 +6,14 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Status" icon-off="ion-ios7-pulse" icon-on="ion-ios7-pulse-strong" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
-  </ion-tab>
-
-
-  <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios7-chatboxes-outline" icon-on="ion-ios7-chatboxes" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
-  </ion-tab>
-
-  <!-- Friends Tab -->
-  <ion-tab title="Friends" icon-off="ion-ios7-heart-outline" icon-on="ion-ios7-heart" href="#/tab/friends">
-    <ion-nav-view name="tab-friends"></ion-nav-view>
-  </ion-tab>
-
-
-  <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
-  </ion-tab>
-
-  <!-- Photo Tab -->
-  <ion-tab title="Photo" icon-off="ion-ios7-gear-outline" icon-on="ion-ios7-gear" href="#/tab/photo">
+  <!-- Photos Tab -->
+  <ion-tab title="Photos" icon-off="ion-camera" icon-on="ion-camera" href="#/tab/photos">
     <ion-nav-view name="tab-photos"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Gallery Tab -->
+  <ion-tab title="Gallery" icon-off="ion-images" icon-on="ion-images" href="#/tab/gallery">
+    <ion-nav-view name="tab-gallery"></ion-nav-view>
   </ion-tab>
 
 
