--- a/www/templates/tab-gallery.html
+++ b/www/templates/tab-gallery.html
@@ -7,6 +7,6 @@
         Item {{ item.id }}
       </ion-item>
     </ion-list>
-    <ion-infinite-scroll ng-if="!noMoreItemsAvailable" on-infinite="loadMore()" distance="10%"></ion-infinite-scroll>
+    <ion-infinite-scroll icon="ion-loading-c" ng-if="!noMoreItemsAvailable" on-infinite="loadMore()" distance="1%"></ion-infinite-scroll>
   </ion-content>
 </ion-view>
