--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,7 +5,6 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
-
   <!-- Photos Tab -->
   <ion-tab title="Photos" icon-off="ion-camera" icon-on="ion-camera" href="#/tab/photos">
     <ion-nav-view name="tab-photos"></ion-nav-view>
@@ -16,5 +15,19 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="tab-gallery"></ion-nav-view>
   </ion-tab>
 
+  <!-- Gallery 2 Tab -->
+  <ion-tab title="Gallery2" icon-off="ion-images" icon-on="ion-images" href="#/tab/gallery2">
+    <ion-nav-view name="tab-gallery2"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Gallery 3 Tab -->
+  <ion-tab title="Gallery3" icon-off="ion-images" icon-on="ion-images" href="#/tab/gallery3">
+    <ion-nav-view name="tab-gallery3"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Gallery 4 Tab -->
+  <ion-tab title="Gallery4" icon-off="ion-images" icon-on="ion-images" href="#/tab/gallery4">
+    <ion-nav-view name="tab-gallery4"></ion-nav-view>
+  </ion-tab>
 
 </ion-tabs>
